finshed the sight

--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@ how does javascript work?
     <p> 
         The event loop is the secret behind JavaScript’s asynchronous programming. JS executes all operations on a single thread, but using a few smart data structures, it gives us the illusion of multi-threading. Let’s take a look at what happens on the back-end.
     </p>
+    <h2>
+     what is the difference of localStorage and sassionStorage?
+    </h2>
+    <p> 
+        The difference between localStorage and sessionStorage has to do with lifetime and scope: how long the data is saved for and who the data is accessible to. Session storage is destroyed once the user closes the browser whereas, Local storage stores data with no expiration date
+    </p>
 </section>
         <!-- add javascript  file  -->
         <script src="./js/app.js"></script>
